--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
-<!DOCTYPE html>
-<html lang="ar">
-<head>
-  <meta charset="UTF-8">
-  <title>موقع التغذية</title>
-</head>
-<body>
-  <h1>👋 أهلاً بيك في موقع التغذية</h1>
-  <p>اختار اللغة:</p>
-  <ul>
-    <li><a href="index-ar.html">🇪🇬 العربية</a></li>
-    <li><a href="index-en.html">🇬🇧 English</a></li>
-  </ul>
-</body>
-</html>
+// lang_en.json
+{
+  "welcome": "Welcome to Nutrition Hub",
+  "search": "Search for food",
+  "calculator": "Macro/Micro Calculator"
+}
+
+// lang_ar.json
+{
+  "welcome": "مرحباً بك في مركز التغذية",
+  "search": "ابحث عن الطعام",
+  "calculator": "حاسبة الماكروز والميكروز"
+}
+// حساب الماكروز بعد إدخال كمية الطعام
+function calculateNutrition(foodName, weight) { ... }
+<div class="food-card"> … </div>
+<header>…</header>
+<main>…</main>
+<section>…</section>
+<article>…</article>
+<footer>…</footer>
+<meta name="description" content="حاسبة ماكروز وميكروز للأطعمة مع شرح مبسط للأنظمة الغذائية.">
